# Advent-of-code

./: .gitignore  README.md
2022/day1/: solution.cpp
2022/day10/: solnb.txt  solution.cpp
2022/day11/: solution.cpp
2022/day12/: solution.cpp
2022/day13/: solution.cpp
2022/day14/: solution.cpp
2022/day15/: solution.cpp
2022/day16/: solution_a.cpp  solution_b.cpp
2022/day17/: solution.cpp  solution_a.cpp
2022/day18/: solution_a.cpp
2022/day2/: solution.cpp
2022/day20/: solution.cpp
2022/day21/: solution.cpp
2022/day22/: info_help_partb.txt  input_dis.txt  solution_a.cpp  solution_b.cpp
2022/day23/: solution.cpp
2022/day25/: solution.cpp
2022/day3/: solution.cpp
2022/day4/: solution.cpp
2022/day5/: solution.cpp
2022/day6/: solution.cpp
2022/day7/: solution.cpp
2022/day8/: solution.cpp
2022/day9/: solution.cpp
2023/day1/: solution.cpp
2023/day10/: solution.cpp
2023/day11/: solution.cpp
2023/day12/: README.md  solution.cpp
2023/day13/: solution.cpp
2023/day14/: solution.cpp
2023/day15/: solution.cpp
2023/day16/: solution.cpp
2023/day17/: solution.cpp
2023/day18/: solution.cpp
2023/day19/: solution.cpp
2023/day2/: solution.cpp
2023/day20/: solution.cpp
2023/day23/: README.md  solution.cpp
2023/day24/: solution.cpp
2023/day3/: solution.cpp
2023/day4/: solution.cpp
2023/day5/: solution.cpp
2023/day6/: solution.cpp
2023/day7/: solution.cpp
2023/day8/: solution.cpp
2023/day9/: solution.cpp
2025/day10/: .gitignore  CMakeLists.txt  README.md  solution.cpp
GCC on Windows/: README.md
(+37 files in other folders)
